atualizado cor de fundo e css

--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
   bottom: 10;
   width: 500px;
   border: 10px solid #73AD21;
-  
 }
 
 body{
-  background-color: rgb(233, 115, 115);
+  background-color:  rgb(253, 251, 251);
   line-height: 25px;
 }
 
@@ -22,42 +21,43 @@ body{
   line-height: 100px;
   margin: 10px;
   border: 30px;
-  
 }
 
-
-   
 #licoes_aprendidas {
-  
   display: inline-block;
   font-size: 20px;
   list-style-type: none
 }
+
 #licoes_a_aprender{
   display: inline-block;
   font-size: 20px;
   list-style-type: none
-  
 }
 
  
 #rodape{
   font-family:Arial, sans-serif;
-  
 }
 
 #article{
  width: 400px;
-
 }
 
 #aside{
   width: 40%;
   float: right;
   font-style: italic;
-  
-  
+  border-width: medium;
+ border-style: solid;
+ border-color: rgb(216, 128, 128);
 }
 
+#borderaside{
+border-width: medium;
+border-style: solid;
+border-color: rgb(216, 128, 128);
+font-style: italic;
+}
  
   
