--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  padding: auto;
+  border: rgb(red, green, blue);
 }
 
 body {
@@ -13,11 +15,6 @@ a {
   color: rgb(119, 119, 119);
 }
 
-main {
-  background-color: rgb(31, 31, 31);
-  margin: 3%;
-  margin-bottom: 0%;
-}
 
 #cabecalho {
   display: inline-block;
@@ -52,9 +49,45 @@ nav ul {
   text-align: center;
 }
 
-#minha_foto {
-  height: 300px;
+main {
+  background-color: rgb(31, 31, 31);
+  margin: 3%;
+  margin-bottom: 0%;
+  padding-bottom: 2.5%;
+}
+
+main img {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  height: 420px;
   margin-top: 4%;
+}
+
+.lado-esquerdo {
+  float: left;
+  width: 43%;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  margin-left: 3%;
+}
+
+.lado-direito {
+  line-height: 1.4em;
+  display: inline-flex;
+  float: right;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-right: 1%;
+}
+
+table {
+  clear: both;
+  font-size: 0.9em;
+  caption-side: bottom;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .unbold {
@@ -62,11 +95,6 @@ nav ul {
   font-style: italic;
 }
 
-table {
-  font-size: 0.9em;
-  caption-side: bottom;
-  text-align: center;
-}
 
 footer {
   background-color: rgb(64, 64, 64);
