--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav li {
   padding: 10px 5px;
   margin-left: 50px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 26px;
 }
 
 section {
