--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .header {
   position: fixed;
   top: 0;
-  z-index: 7;
+  z-index: 1;
   background-color: #223843;
   width: 100%;
   height: 25%;
@@ -28,7 +28,7 @@ body {
 .navigation {
   position: fixed;
   top: 16%;
-  z-index: 7;
+  z-index: 1;
   width: 100%;
   text-align: center;
 
@@ -61,6 +61,24 @@ ul.nav_list li a {
   display: inline-block;
 }
 
+.progress-section {
+  background-color: #DBD3D8;
+  border-radius: 8%;
+  padding: 32px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 3%;
+}
+
+.table  {
+  text-align: center;
+  margin: auto;
+}
+
+th, td {
+  padding: 8px 40px;
+}
+
 .lado-esquerdo, .lado-direito {
   background-color: #DBD3D8;
   border-radius: 10%;
@@ -84,4 +102,3 @@ h2 {
 ul.nav_list li a:hover {
   font-size: larger;
 }
-
