--- a/style.css
+++ b/style.css
@@ -1,14 +1,33 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(253, 251, 251);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 45px;
-    width: fit-content;
+#left {
+    float: left;
+}
+
+#right {
+    float: right;
+}
+
+header {
     background-color: rgb(238, 212, 188);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    top: 0;
+    width: 120vw;
+    padding: 50px;
+    position: fixed;
+}
+
+header h1 {
+    font-size: 45px;
     padding: 15px;
     padding-left: 40px;
     padding-right: 40px;
@@ -17,31 +36,61 @@ h1 {
     margin-left: auto;
 }
 
-h2 {
-    font-size: 20px;
+.nav-main {
+    position: absolute;
+    left: 3%;
+    bottom: 1px;
+}
+
+
+.nav-main ul li {
+    display: inline-block;
+    padding: 25px;
+}
+
+.nav-main ul li a {
+  color: rgb(0, 0, 0);
+}
+
+main section {
+    background-color: rgb(226, 196, 168);
+    border-radius: 35px;
+    
+}
+
+main li {
+    padding: 5px;
+}
+
+p, h2, h3 {
     text-align: center;
 }
 
 footer {
+    background-color: rgb(194, 170, 148);
+    clear: both;
+    position: relative;
+}
+#footer-text {
     clear: both;
     text-align: right;
 }
 
 
 article {
-    text-align: center;
     padding: 20px;  
     width: fit-content;
     background-color:rgb(238, 212, 188);
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 20px;
+    border-radius: 40px;
 }
 
+
 section {
-    text-align: center;
     padding: 50px;
-    background-color:rgb(238, 212, 188);
+    margin: 10px;
     display: inline-block;
 }
 
@@ -51,13 +100,6 @@ section {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+    margin-top: 200px;
 }
 
-.lista {
-    background-color: rgb(238, 212, 188);
-    padding: 5px;
-    color: rgb(44, 34, 19);
-    display: inline-block;  
-    width: 300px;
-    font-size: 120%;
-}
