--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
 /* Conteúdo das lições aprendidas e a aprender */
 
 #container_licoes {
-  margin-top: 100px;
+  margin-top: 120px;
 }
 
 #container_ol {
@@ -78,7 +78,7 @@ main {
 
 #container_conteudos {
   background-color: coral;
-  margin-top: 100px;
+  margin-top: 120px;
   padding: 20px;
   text-align: justify;
 }
@@ -114,4 +114,47 @@ main {
   padding: 10px;
 }
 
+/* Tabela */
 
+#tabela {
+  margin-top: 120px;
+  background-color: rgb(224, 186, 224);
+  padding: 10px 0px 25px 0px;
+}
+
+#tabela h2 {
+  text-align: center;
+}
+
+table {
+  margin: auto;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+th, td {
+  padding: 5px 10px;
+}
+
+th {
+  background-color: rgb(21, 4, 98);
+  color: white;
+  font-size: 1.2em;
+}
+
+/* Rodapé */
+
+#rodape {
+  text-align: center;
+  background-color: rgb(78, 74, 78);
+  height: 25px;
+  margin-top: 60px;
+}
+
+#rodape h4 {
+  padding-top: 4px;
+}
