--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
   background-color: green;
   position: fixed;
   top: 0;
+  width: 100%;
 }
 
 #minha_foto {
@@ -29,10 +30,11 @@ header {
 }
 
 .posilistas :hover {
-  border-style: solid;
+  border: black solid;
   background-color: brown;
   font-size: large;
   color: cornsilk;
+  bor
 }
 
 .artigo {
@@ -42,10 +44,6 @@ header {
   font-size: larger;
   line-height: 20px;
 }
-
-/* na descrição de posição das classes lado-direito,lado-esquerdo e ladoalado; foi
-utilizado o codigo do léo machado
- (https://github.com/tryber/sd-016-b-project-lessons-learned/pull/20/commits/103b3d9e3fb1cb6f01d1106e2990086be8e8aea2) como base */
 
 .lado-direito {
   display: inline;
@@ -81,6 +79,7 @@ h2 {
   margin-bottom: 50px;
   text-align: center;
 }
+
 table tr td{
   border: green solid;
 }
