--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+* {font-family: Arial, Helvetica, sans-serif;
+line-height: 40px;
+color:rgb(3, 32, 3);
+font-size: 20px;}
+
 body {margin: 0;
   background-color: rgb(253, 251, 251);
 }
 
-#cabecalho {background-color:rgb(205, 255, 220);
+#cabecalho {font-size: 60px;
+  text-align: center;
+  background-color:rgb(205, 255, 220);
   position: fixed;
   top: 0;
   padding: 15px;
