--- a/style.css
+++ b/style.css
@@ -3,17 +3,23 @@ body{
 }
 
 #cabecalho{
-    background-color: burlywood;
+    background-color: rgb(231, 231, 231);
+    color: #3d495c;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
     position:fixed;
     top: 0;
     width: 99%;
 }
 
 #navegacao li{
-    background-color: darkgoldenrod;
+    background-color: #2ec18c;
+    color: #ffff;
     display: inline-block;
-    width: 120px;
     text-align: center;
+    padding: 10px;
+    width: 100px;
+    margin-right: 50px;
    
 }
 
