--- a/style.css
+++ b/style.css
@@ -1,35 +1,68 @@
-* {font-family: Arial, Helvetica, sans-serif;
-line-height: 40px;
-color:rgb(3, 32, 3);
-font-size: 20px;}
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 40px;
+  color: rgb(3, 32, 3);
+  font-size: 20px;
+}
 
-body {margin: 0;
+body {
+  margin: 0;
   background-color: rgb(253, 251, 251);
 }
 
-#cabecalho {font-size: 60px;
+#cabecalho {
+  font-size: 60px;
   text-align: center;
-  background-color:rgb(205, 255, 220);
+  background-color: rgb(205, 255, 220);
   position: fixed;
   top: 0;
   padding: 15px;
-  border: solid 5px; 
+  border: solid 5px;
   width: 100%;
 }
 
-#minha_foto {margin-top: 160px;
+#minha_foto {
+  display: block;
+  margin-top: 160px;
   margin-left: 50px;
   width: 200px;
   border-radius: 100%;
+  border: solid;
 }
 
-#experiencia {margin: 40px;
-text-align: center;}
+.lado-esquerdo {
+  float: left;
+  width: 400px;
+  margin-left: 60px;
+}
 
-#aside {margin: 30px;}
+.lado-direito {
+  margin-right: 600px;
+  float: right;
+}
 
-.table{border: solid;
-margin: 50px;
-padding: 10px;}
+h2 {display: inline-block;
+  margin-left: 40px;
+  margin-top: 10px;
+  text-align: center;
+}
 
-#rodape{text-align: center;}
+#experiencia {display: inline-block;
+  margin-left: 40px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+#aside {
+  margin: 30px;
+}
+
+.table {
+  border: solid;
+  margin: 50px;
+  padding: 10px;
+}
+
+#rodape {
+  text-align: center;
+}
