--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
-body{background-color: rgb(253, 251, 251);}
-#cabecalho{position: fixed;top: 0;}
-#minha_foto{margin-top: 10em;width: 18%;}
+body {
+    background-color: rgb(253, 251, 251);}
+#cabecalho {
+    position: fixed;top: 0;}
+#minha_foto {
+    margin-top: 10em;width: 18%;}
