--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
-* {
-font-family: Arial, Helvetica, sans-serif;
+* { font-family: Arial, Helvetica, sans-serif;
 line-height: 40px;
 color: rgb(3, 32, 3);
 font-size: 20px;
 }
 
-body {
-margin: 0;
+body { margin: 0;
 background-color: rgb(253, 251, 251);
 }
 
-#cabecalho {
-font-size: 60px;
+#cabecalho { font-size: 60px;
 text-align: center;
 background-color: rgb(205, 255, 220);
 position: fixed;
@@ -21,8 +18,7 @@ border: solid 5px;
 width: 100%;
 }
 
-#minha_foto {
-display: block;
+#minha_foto { display: block;
 margin-top: 160px;
 margin-left: 50px;
 width: 200px;
@@ -30,41 +26,34 @@ border-radius: 100%;
 border: solid;
 }
 
-.lado-esquerdo {
-float: left;
+.lado-esquerdo { float: left;
 width: 400px;
 margin-left: 60px;
 }
 
-.lado-direito {
-margin-right: 600px;
+.lado-direito { margin-right: 600px;
 float: right;
 }
 
-h2 {
-display: inline-block;
+h2 { display: inline-block;
 margin-left: 40px;
 margin-top: 10px;
 text-align: center;
 }
 
-#experiencia {
-display: inline-block;
+#experiencia { display: inline-block;
 margin-left: 40px;
 margin-top: 50px;
 text-align: center;
 }
 
-#aside {
-margin: 30px;
+#aside { margin: 30px;
 }
 
-.table {
-border: solid;
+.table { border: solid;
 margin: 50px;
 padding: 10px;
 }
 
-#rodape {
-text-align: center;
+#rodape { text-align: center;
 }
