--- a/style.css
+++ b/style.css
@@ -3,53 +3,53 @@
   padding: 0;
   border: 0;
 }
+
 body {
   background-color: rgb(253, 251, 251);
   font-family: Arial, sans-serif;
   font-size: 14px;
   color: rgba(14, 0, 0, 0.568);
-  width: 1366px;
   align-self: start;
 }
-table {
+
+table , tr , td {
   margin: 10px;
   border: 10px;
 }
-tr {
-  margin: 10px;
-  border: 10px;
-}
-td {
-  margin: 10px;
-  border: 10px;
-}
+
 .profphoto {
   width: 150px;
   position: relative;
   top: 5px;
 }
+
 .lists {
   position: absolute;
   top: 285px;
 }
+
 .artigos {
   display: inline;
   line-height: 1.1;
 }
+
 .lado-direito {
   float: left;
   width: 70%;
 }
+
 .lado-esquerdo {
   width: 30%;
   float: right;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
   background-color: rgb(5, 73, 100);
   width: 100%;
 }
+
 #cabecalho {
   position: fixed;
   width: 1366px;
@@ -59,9 +59,10 @@ td {
   margin-bottom: 5px;
   background-color: rgb(226, 89, 9);
 }
+
 #minha_foto {
   border-radius: 195px;
   border-top-left-radius: 50px;
   position: absolute;
   top: 101px;
-}
+} /* stylelint-disable-next-line rule */
