--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: 0;
   z-index: 1;
-  background-color: #223843;
+  background-color: rgb(34, 56, 67);
   width: 100%;
   height: 25%;
 }
@@ -25,7 +25,7 @@ body {
   color: white;
 }
 
-.navigation {
+.navigation-bar {
   position: fixed;
   top: 16%;
   z-index: 1;
@@ -34,12 +34,12 @@ body {
 
 }
 
-ul.nav_list li {
+.navigation-item {
   display: inline;
   margin-right: 6%;
 }
 
-ul.nav_list li a {
+.navigation-link {
   color: white;
   text-decoration: none;
 }
@@ -50,8 +50,8 @@ ul.nav_list li a {
   margin-left: 40px;
 }
 
-.section_setup {
-  background-color: #DBD3D8;
+.learn-section {
+  background-color: rgb(219, 211, 216);
   border-radius: 10%;
   padding: 20px;
   margin-top: 3%;
@@ -62,7 +62,7 @@ ul.nav_list li a {
 }
 
 .progress-section {
-  background-color: #DBD3D8;
+  background-color: rgb(219, 211, 216);
   border-radius: 8%;
   padding: 32px;
   margin-left: 5%;
@@ -70,17 +70,17 @@ ul.nav_list li a {
   margin-top: 3%;
 }
 
-.table  {
+.table {
   text-align: center;
   margin: auto;
 }
 
-th, td {
+th , td {
   padding: 8px 40px;
 }
 
-.lado-esquerdo, .lado-direito {
-  background-color: #DBD3D8;
+.lado-esquerdo , .lado-direito {
+  background-color: rgb(219, 211, 216);
   border-radius: 10%;
   padding: 32px;
   margin: 3% 5%;
@@ -89,7 +89,7 @@ th, td {
 }
 
 #rodape {
-  background-color: #223843;
+  background-color: rgb(34, 56, 67);
   color: white;
   padding: 20px;
   text-align: center;
@@ -99,6 +99,6 @@ h2 {
   text-align: center;
 }
 
-ul.nav_list li a:hover {
+.navigation-link:hover {
   font-size: larger;
 }
