--- a/style.css
+++ b/style.css
@@ -1,112 +1,113 @@
-*{
-    margin:0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-color:rgb(253, 251, 251);
-}
-
-#cabecalho{
-    background-color: rgb(231, 231, 231);
-    color: #3d495c;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    position:fixed;
-    
-    top: 0;
-    padding: 20px;
-    width: 100%;
+body {
+  background-color: rgb(253, 251, 251);
 }
 
-#navegacao li{
-    background-color: #2ec18c;
-    color: #ffff;
-    border: 1px solid #dde2eb;
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    width: 100px;
-    margin-right: 20px;
-    margin-top: 10px;
-    font-size: 18px;
-   
+#cabecalho {
+  background-color: rgb(231, 231, 231);
+  color: #3d495c;
+  font-family: Montserrat, sans-serif;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  padding: 20px;
+  width: 100%;
 }
 
-#minha_foto{
-    margin: 150px 0 0 20px;
-    width:200px;
+#navegacao li {
+  background-color: rgb(46,193,140);
+  color: white;
+  border: 1px solid rgb(221,226,235);
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+  width: 100px;
+  margin-right: 20px;
+  margin-top: 10px;
+  font-size: 18px;
+
+}
+
+#minha_foto {
+  margin: 150px 0 0 20px;
+  width: 200px;
+
     /* filter: grayscale(100%); */
 
 }
 
-#rodape{
-    background-color: rgb(231, 231, 231);
-    bottom: 0;
-    font-family: 'Montserrat', sans-serif;
-    padding: 15px;
-    position: fixed;
-    width: 100%;
+#rodape {
+  background-color: rgb(231, 231, 231);
+  bottom: 0;
+  font-family: 'Montserrat', sans-serif;
+  padding: 15px;
+  position: fixed;
+  width: 100%;
 }
 
-.listas{
-    background-color: rgb(231, 231, 231);
-    color: #3d495c;
-    font-family: 'Montserrat', sans-serif;
-    line-height: 20px;
-    width: 250px;
-    float:right;
-    margin-top: 150px;
-    margin-right:20px;
+.listas {
+  background-color: rgb(231, 231, 231);
+  color: rgb(61,73,92);
+  font-family: 'Montserrat', sans-serif;
+  line-height: 20px;
+  width: 250px;
+  float: right;
+  margin-top: 150px;
+  margin-right: 20px;
 }
 
-#licoes_aprendidas ,#licoes_a_aprender{
-    margin:10px 20px 10px 50px;
+#licoes_aprendidas ,#licoes_a_aprender {
+  margin: 10px 20px 10px 50px;
 }
 
-h2{
-
-    text-align: center;
-    background-color: #2ec18c;
-    color:#ffff;
-    font-weight: lighter;
-    padding: 15px;
+h2 {
+  text-align: center;
+  background-color: rgb(46,193,140);
+  color:white;
+  font-weight: lighter;
+  padding: 15px;
 }
 
-.lado-esquerdo{
-    background-color: rgb(231, 231, 231);
-    width: 300px;
-    margin:30px 10px 20px 10px;
-    display:inline-block;
-
-}
-
-aside{
-    display: inline-block;
+.lado-esquerdo {
+  background-color: rgb(231, 231, 231);
+  width: 300px;
+  margin: 30px 10px 20px 10px;
+  display: inline-block;
 
 }
 
-.lado-direito{
-    background-color: rgb(231, 231, 231);
-    display: inline-block;
-    width: 200px;
+aside {
+  display: inline-block;
 
 }
 
-#tabela{
-    display: inline-block;
+.lado-direito {
+  background-color: rgb(231, 231, 231);
+  display: inline-block;
+  width: 200px;
+
+}
+
+#tabela {
+  display: inline-block;
+
     /* border: 1px solid black; */
     /* margin-left: 10px; */
-    border-spacing: 10px;
-    font-family:'Montserrat', sans-serif;
+
+  border-spacing: 10px;
+  font-family: 'Montserrat', sans-serif;
 
 }
 
-#conteudo-central{
-    background-color: rgb(231, 231, 231);
-    display: inline-block;
-    align-items: center;
+#conteudo-central {
+  background-color: rgb(231, 231, 231);
+  display: inline-block;
+  align-items: center;
   
 }
-.clear{
-    clear: both;
+.clear {
+  clear: both;
 }
