--- a/style.css
+++ b/style.css
@@ -2,25 +2,27 @@
   margin: 0;
   padding: 0;
 }
+
 body {
-  background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251 , 251);
 }
 
 #cabecalho {
-  background-color: rgb(231, 231, 231);
-  color: rgb(61,73,92);
+  background-color: rgb(231, 231 , 231);
+  color: rgb(61, 73 ,92);
   font-family: Montserrat, sans-serif;
   text-align: center;
   position: fixed;
   top: 0;
   padding: 20px;
   width: 100%;
+
 }
 
 #navegacao li {
   background-color: rgb(46, 193 ,140);
   color: white;
-  border: 1px solid rgb(221,226,235);
+  border: 1px solid rgb(221, 226 ,235);
   display: inline-block;
   text-align: center;
   padding: 10px;
@@ -42,21 +44,23 @@ body {
 #rodape {
   background-color: rgb(231, 231 , 231);
   bottom: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   padding: 15px;
   position: fixed;
   width: 100%;
+
 }
 
 .listas {
   background-color: rgb(231, 231 , 231);
-  color: rgb(61,73,92);
-  font-family: 'Montserrat', sans-serif;
+  color: rgb(61, 73 ,92);
+  font-family: Montserrat, sans-serif;
   line-height: 20px;
   width: 250px;
   float: right;
   margin-top: 150px;
   margin-right: 20px;
+
 }
 
 #licoes_aprendidas , #licoes_a_aprender {
@@ -99,7 +103,8 @@ aside {
   /* margin-left: 10px; */
 
   border-spacing: 10px;
-  font-family: 'Montserrat', sans-serif;
+
+  font-family: Montserrat, sans-serif;
 
 }
 
